Stop primary nav items wrapping

--- a/assets/scss/components/_navigation.scss
+++ b/assets/scss/components/_navigation.scss
@@ -30,9 +30,14 @@
 }
 
 .nav-menu-primary {
+	.menu-desktop {
+		flex-wrap: nowrap;
+	}
+
 	li.menu-item {
 		a {
 			text-decoration: none;
+			text-align: center;
 		}
 	}
 
